--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <br />
     <footer>
       <p>
-        If you found yourself on this page please be aware that the content on
-        this page is for demonstration only. Use at your own risk!<br />
-        No validation or endorsment from NSO, NATO, Govenments or anybody at
+        If you found yourself on this page please be aware that the contents of
+        this page is for demonstration only and very much work in progress. Use at your own risk!<br />
+        No validation or endorsment from NSO, NATO, Governments or anybody at
         all.<br />
         I strongly recommend using the publicly available standard found on the
         NSO website.<br />
