--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <input type="number" value="" id="Q" onchange="updateCalcs()" />
       <button onclick="updateCalcs()">calculate</button>
     </p>
-    <table style="width: 100%">
+    <table id="myTable" style="width: 100%">
       <tr>
         <th style="width: 10%">REF</th>
-        <th>Condition</th>
+        <th style="width: 40%">Condition</th>
         <th style="width: 30%">Formula for D</th>
         <th>D [m]</th>
       </tr>
@@ -46,23 +46,317 @@
         <td>0.6*Q^(1/3)</td>
       </tr>
       <tr>
+        <td>BD3</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>0.5*Q^(1/3)</td>
+        <td id="BD3"></td>
+      </tr>
+      <tr>
+        <td>BD4</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>0.8*Q^(1/3)</td>
+        <td id="BD4"></td>
+      </tr>
+      <tr>
+        <td>BD5</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>1.1*Q^(1/3)</td>
+        <td id="BD5"></td>
+      </tr>
+      <tr>
         <td>BD6</td>
         <td>1 kg ≤ Q ≤ 500,000 kg</td>
         <td>1.2*Q^(1/3)</td>
         <td id="BD6"></td>
       </tr>
+      <tr>
+        <td>BD7</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>1.8*Q^(1/3)</td>
+        <td id="BD7"></td>
+      </tr>
+      <tr>
+        <td>BD8</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>2.0*Q^(1/3)</td>
+        <td id="BD8"></td>
+      </tr>
+      <tr>
+        <td>BD9</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>2.4*Q^(1/3)</td>
+        <td id="BD9"></td>
+      </tr>
+      <tr>
+        <td>BD10</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>3.2*Q^(1/3)</td>
+        <td id="BD10"></td>
+      </tr>
+      <tr>
+        <td>BD11</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>3.6*Q^(1/3)</td>
+        <td id="BD11"></td>
+      </tr>
+      <tr>
+        <td>BD12</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>4.0*Q^(1/3)</td>
+        <td id="BD12"></td>
+      </tr>
+      <tr>
+        <td>BD13</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>4.4*Q^(1/3)</td>
+        <td id="BD13"></td>
+      </tr>
+      <tr>
+        <td>BD14</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>4.8*Q^(1/3)</td>
+        <td id="BD14"></td>
+      </tr>
+      <tr>
+        <td>BD15</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>6*Q^(1/3)</td>
+        <td id="BD15"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD16</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>0.47*Q^(2/3)</td>
+        <td rowspan="3" id="BD16"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>1.73*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>7*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD17</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>7.2*Q^(1/3)</td>
+        <td id="BD17"></td>
+      </tr>
+      <tr>
+        <td>BD18</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>8*Q^(1/3)</td>
+        <td id="BD18"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD19</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>0.61*Q^(2/3)</td>
+        <td rowspan="3" id="BD19"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>2.23*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>9*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD20</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>0.63*Q^(2/3)</td>
+        <td rowspan="3" id="BD20"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>2.30*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>9.3*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD21</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>9.6*Q^(1/3)</td>
+        <td id="BD21"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD22</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>0.75*Q^(2/3)</td>
+        <td rowspan="3" id="BD22"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>2.75*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 500,000 kg</td>
+        <td>11.1*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD23</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>0.81*Q^(2/3)</td>
+        <td rowspan="3" id="BD23"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>2.97*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>12*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD24</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>13*Q^(1/3)</td>
+        <td id="BD24"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD25</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>0.95*Q^(2/3)</td>
+        <td rowspan="3" id="BD25"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>3.47*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>14*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD26</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>1*Q^(2/3)</td>
+        <td rowspan="3" id="BD26"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>3.6*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 500,000 kg</td>
+        <td>14.8*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD27</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>16*Q^(1/3)</td>
+        <td id="BD27"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD28</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>1.22*Q^(2/3)</td>
+        <td rowspan="3" id="BD28"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>4.46*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>18*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD29</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>20*Q^(1/3)</td>
+        <td id="BD29"></td>
+      </tr>
+      <tr>
+        <td>BD30</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>22.2*Q^(1/3)</td>
+        <td id="BD30"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD31</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>1.5*Q^(2/3)</td>
+        <td rowspan="3" id="BD31"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>5.5*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 500,000 kg</td>
+        <td>22.2*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD32</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>25*Q^(1/3)</td>
+        <td id="BD32"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD33</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>1.89*Q^(2/3)</td>
+        <td rowspan="3" id="BD33"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>6.94*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>28*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD34</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>2.43*Q^(2/3)</td>
+        <td rowspan="3" id="BD34"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>8.92*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 45,000 kg</td>
+        <td>36*Q^(1/3)</td>
+      </tr>
+      <tr>
+        <td>BD35</td>
+        <td>1 kg ≤ Q ≤ 500,000 kg</td>
+        <td>44.4*Q^(1/3)</td>
+        <td id="BD35"></td>
+      </tr>
+      <tr>
+        <td rowspan="3">BD36</td>
+        <td>1 kg ≤ Q &lt 2,500 kg</td>
+        <td>3*Q^(2/3)</td>
+        <td rowspan="3" id="BD36"></td>
+      </tr>
+      <tr>
+        <td>2,500 kg ≤ Q &lt 4,500 kg</td>
+        <td>11*Q^(1/2)</td>
+      </tr>
+      <tr>
+        <td>4,500 kg ≤ Q ≤ 500,000 kg</td>
+        <td>44.4*Q^(1/3)</td>
+      </tr>
+      <!-- end of table -->
     </table>
-    <br />
-    <footer>
-      <p>
-        If you found yourself on this page please be aware that the contents of
-        this page is for demonstration only and very much work in progress. Use
-        at your own risk!<br />
-        No validation or endorsment from NSO, NATO, Governments or anybody at
-        all.<br />
-        I strongly recommend using the publicly available standard found on the
-        NSO website.<br />
-      </p>
-    </footer>
   </body>
+  <footer>
+    <p>
+      If you found yourself on this page please be aware that the contents of
+      this page is for demonstration only and very much work in progress. Use at
+      your own risk!<br />
+      No validation or endorsment from NSO, NATO, Governments or anybody at
+      all.<br />
+      I strongly recommend using the publicly available standard found on the
+      NSO website.<br />
+    </p>
+  </footer>
 </html>
